# aubio-esp32

./: CMakeLists.txt
src/: musicutils.h
src/tempo/: beattracking.c
